# Data-Driven-Fleet-Cascade

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  app.py  docker-compose.yml  fleet_cascade_overview.ipynb  index.html  mkdocs.yml  plan.md  pyproject.toml  sitemap.xml
.github/: SECRETS_SETUP.md
.github/workflows/: ci.yml  deploy.yml
api/: index.html
api/endpoints/: index.html
api/examples/: index.html
api/models/: index.html
architecture/: index.html
architecture/data-flow/: index.html
architecture/modules/: index.html
architecture/system-overview/: index.html
config/: config.yaml
config/constraints/: fleet_constraints.json
developer/: index.html
developer/code-style/: index.html
developer/contributing/: index.html
developer/structure/: index.html
developer/testing/: index.html
docker/: Dockerfile.api  Dockerfile.dashboard
docs/: .gitkeep  index.md
docs/api/: endpoints.md  examples.md  index.md  models.md
docs/architecture/: data-flow.md  index.md  modules.md  system-overview.md
docs/developer/: code-style.md  contributing.md  index.md  refactoring-redundancy.md  structure.md  testing.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/includes/: abbreviations.md
docs/javascripts/: mathjax.js
docs/operations/: deployment.md  index.md  monitoring.md  troubleshooting.md
docs/reference/: changelog.md  configuration.md  constraints.md  data-formats.md  index.md
docs/stylesheets/: extra.css
docs/user-guide/: dashboard.md  forecasting.md  index.md  optimization.md  results.md  risk.md
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
includes/abbreviations/: index.html
notebooks/: 01_complete_workflow.ipynb
operations/: index.html
operations/deployment/: index.html
operations/monitoring/: index.html
operations/troubleshooting/: index.html
reference/: index.html
reference/changelog/: index.html
reference/configuration/: index.html
reference/constraints/: index.html
reference/data-formats/: index.html
scripts/: download_data.py  generate_fleet.py
search/: search_index.json
src/: __init__.py
src/api/: main.py
src/api/models/: __init__.py  schemas.py
src/api/routes/: __init__.py  forecast.py  optimize.py  risk.py
src/contracts/: __init__.py
src/data/: __init__.py  loader.py  preprocessing.py
src/explainability/: __init__.py
src/forecasting/: __init__.py
src/forecasting/models/: __init__.py  xgboost_model.py
src/optimization/: __init__.py  cascade.py
src/optimization/solvers/: __init__.py
src/risk/: __init__.py
src/risk/models/: __init__.py  rul_model.py
src/utils/: __init__.py  config.py  logging.py
tests/: __init__.py  conftest.py
tests/fixtures/: .gitkeep
tests/integration/: test_api.py
tests/unit/: test_optimization.py
user-guide/: index.html
user-guide/forecasting/: index.html
user-guide/optimization/: index.html
user-guide/results/: index.html
user-guide/risk/: index.html
