[project]
name = "fleet-cascade"
version = "0.1.0"
description = "Enterprise-grade decision intelligence platform for fleet operations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "fleet-management",
    "optimization",
    "demand-forecasting",
    "machine-learning",
    "decision-intelligence"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# =============================================================================
# Dependencies
# =============================================================================
dependencies = [
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0", # For Parquet support
    # Machine Learning
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    # Optimization
    "ortools>=9.7.0",
    # "pulp>=2.7.0",  # Alternative solver (uncomment if needed)
    # API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Configuration
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    # Utilities
    "httpx>=0.25.0", # For async HTTP requests
    "tenacity>=8.2.0", # For retries
    "structlog>=23.2.0", # For structured logging
    "streamlit>=1.50.0",
    "plotly>=6.5.2",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "ipython>=8.0.0",
]

# Phase 2+ dependencies
ml-advanced = [
    "prophet>=1.1.0",
    "shap>=0.43.0",
]

# Phase 3+ dependencies (Contract Intelligence)
contracts = [
    "pypdf>=3.17.0",
    "pytesseract>=0.3.10",
    "pinecone-client>=2.2.0",
    "sentence-transformers>=2.2.0",
]

# Phase 4 dependencies (Production)
production = [
    "boto3>=1.29.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "celery>=5.3.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "pymdown-extensions>=10.0.0",
]

# Jupyter notebooks
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

# All optional dependencies
all = [
    "fleet-cascade[dev,ml-advanced,contracts,production,docs,notebooks]",
]

[project.urls]
Homepage = "https://github.com/yourusername/fleet-cascade"
Documentation = "https://yourusername.github.io/fleet-cascade"
Repository = "https://github.com/yourusername/fleet-cascade"
Issues = "https://github.com/yourusername/fleet-cascade/issues"

[project.scripts]
fleet-api = "src.api.main:run"

# =============================================================================
# Build System
# =============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# =============================================================================
# Ruff Configuration (Linting & Formatting)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    "data",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "B904",   # Raise from err (noisy for FastAPI HTTPException)
    "B905",   # zip without strict parameter
    "B007",   # Loop control variable not used (intentional in some cases)
    "N803",   # Argument name should be lowercase (X_train is ML convention)
    "N806",   # Variable should be lowercase (X, SOURCE, SINK are conventions)
    "UP006",  # Use builtin types (Dict -> dict) - keep for 3.9 compat
    "UP007",  # Use X | Y for Optional - keep for 3.9 compat
    "UP035",  # Use typing.List -> list - keep for 3.9 compat
    "RET504", # Unnecessary assignment before return
    "ISC001", # Conflicts with formatter
    "ARG001", # Unused function argument (lifespan requires app)
    "ARG002", # Unused method argument
    "SIM108", # Use ternary operator (readability preference)
    "SIM118", # Use key in dict (readability preference)
    "C401",   # Unnecessary generator (readability preference)
    "C408",   # Unnecessary dict() call (used for Plotly kwargs)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
